# zestful

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
cli/: zestful  zestfuld.js
cli/src/: config.rs  main.rs
cli/src/cmd/: daemon.rs  mod.rs  notify.rs  ssh.rs  watch.rs
cli/src/focus/: iterm2.rs  kitty.rs  mod.rs  terminal.rs  wezterm.rs
hooks/: claude-code.json  cline-hook.sh  codex-cli.json  copilot-cli.json  cursor.json
src/: config.rs  log.rs  main.rs
src/cmd/: daemon.rs  events.rs  focus.rs  hook.rs  inspect.rs  mod.rs  notify.rs  ssh.rs  test_focus.rs  tiles.rs  title.rs  watch.rs
src/events/: backend_forwarder.rs  device.rs  env_capture.rs  envelope.rs  map.rs  mod.rs  payload.rs
src/events/store/: mod.rs  prune.rs  query.rs  schema.rs  write.rs
src/events/store/migrations/: 001_initial.sql
src/events/tiles/: cluster.rs  derive.rs  mod.rs  surfaces.rs
src/focus/: cmd.rs  iterm2.rs  kitty.rs  mod.rs  shelldon.rs  terminal.rs  wezterm.rs
src/hooks/: detect.rs  mod.rs  policy.rs
src/workspace/: locate.rs  mod.rs  process.rs  types.rs  uri.rs  win32.rs
src/workspace/browsers/: chrome.rs  chrome_windows.rs  mod.rs
src/workspace/ides/: mod.rs  vscode_family.rs  vscode_family_windows.rs  xcode.rs
src/workspace/multiplexers/: mod.rs  shelldon.rs  tmux.rs  zellij.rs
src/workspace/terminals/: alacritty.rs  apple_terminal.rs  cmd.rs  ghostty.rs  gnome_terminal.rs  iterm2.rs  kitty.rs  mod.rs  powershell.rs  wezterm.rs  windows_terminal.rs  windows_tests.rs
