[package]
name = "zestful"
version = "0.1.0"
edition = "2021"
description = "CLI for the Zestful agent notification app"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "sync", "time", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
iterm2-client = "0.1"
