[package]
name = "zestful"
version = "3.1.0"
edition = "2021"
description = "CLI for the Zestful agent notification app"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "sync", "time", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
ulid = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

